Analog city weather is now dynamic & accurate up to the hour. Spacing corrections and keyfram effects to follow.

--- a/assets/style.css
+++ b/assets/style.css
@@ -109,13 +109,14 @@ ul {
     text-transform: uppercase;
     list-style-type: none;
     text-align: right;
+    font-size: 1rem;
 }
 
 li {
     overflow: hidden;
     font-size: 1rem;
     text-align: right;
-    font-weight: bold;
+    /* font-weight: bold; */
     margin: 0;
 }
 
